--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "emotion": "^11.0.0",
-    "qr-code-styling": "^1.6.0-rc.1",
+    "qrcode": "^1.5.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "^5.3.0",
