--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@mui/base": "^5.0.0-alpha.81",
+    "@mui/core": "^5.0.0-alpha.54",
     "@mui/icons-material": "^5.6.2",
     "@mui/material": "^5.8.0",
     "@mui/utils": "^5.8.0",
@@ -15,8 +16,8 @@
     "axios": "^0.27.2",
     "emotion": "^11.0.0",
     "qrcode": "^1.5.0",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0",
     "react-router-dom": "^5.3.0",
     "react-scripts": "^2.1.3",
     "web-vitals": "^2.1.4"
